--- a/webapp/WEB-INF/write.css
+++ b/webapp/WEB-INF/write.css
@@ -16,12 +16,13 @@
     font-style: normal;
 }
 
-/* -------사이트 전체 적용------- */
+/* ------- 사이트 전체 적용 ------- */
 body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, 
 h6, input, fieldset, legend, p, select, table, th, 
 td, tr, textarea, button, form {
     margin: 0; padding: 0;
 }
+
 /* clearfix */
 .clearfix{*zoom:1;}
 .clearfix:before, .clearfix:after {display: block; content: ""; line-height: 0;}
@@ -32,32 +33,35 @@ body {
     font-size: 12px;
 }
 
+/* ----- 레이아웃 ----- */
 #wrap {
     width: 1130px;
     margin: 0px auto;
 }
 
-/* 파란색 #2699fb */
-
-
-/* ---------------레이아웃-------------- */
-#header {
-    /* background-color: aqua; */
-    /* border: 2px solid #000000; */
-    padding: 30px 0px 30px 0px;
-    /* border-bottom: 2px solid #dddddd; */
-}
-
 #container {
     padding: 40px 0px 10px 0px;
     margin-bottom: 30px;
-
 }
 
-/* ---------헤더---------- */
+#contents_review>ul>li {
+    float:left;
+    margin: 0px 30px 0px 0px;
+}
+
+#select_box{
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+/* ----- 레이아웃 ----- */
+
+
+/* ----- 헤더 ----- */
 #header {
     background-color: #FFFFFF;
     transition: opacity 1s;
+    padding: 30px 0px 30px 0px;
 }
 
 #header>a>img {
@@ -85,10 +89,18 @@ body {
     float:left;
     padding: 10px 0px 10px 20px;
 }
-/* ---------//헤더---------- */
+/* ----- /헤더 ----- */
 
 
-/* 책 선택하기 */
+/* ----- progress bar ----- */
+.progress-bar-contents span {
+    margin-left: 210px;
+    float: center;
+}
+/* ----- /progress bar ----- */
+
+
+/* ----- 책 선택하기 ----- */
 #contents #book_select h1 {
 	padding: 30px 0px 10px 0px;
     margin: 50px 30px 10px 0px;
@@ -97,15 +109,154 @@ body {
     font-size: 25px;
     color: #666666;
 }
-/* 책 선택하기 모달창 안 검색 박스*/
-.search_box{
-	float: center;
-	height: 50px;
-	width:500px;
-	border-radius:8px;
+
+.book_title {
+    font-family: 'MinSans-Medium';
+    font-size: 20px;
+    color: #adaaaa;
+    /* margin: 0px 0px 20px 0px; */
 }
 
-/* 감정 태그 */
+#book_img {
+    float: left;
+    width: 220px;
+    height: 300px;
+    margin-right: 50px;
+    box-shadow: 8px 8px 8px rgb(172, 172, 172);
+}
+
+#book_detail {
+    float:left;
+}
+
+/* 책 제목 */
+#book_detail>h1 {
+    font-family: 'KOHIBaeumOTF';
+    font-size: 25px;
+    color: #666666;
+    margin: 10px 0px 20px 0px;
+}
+
+/* 책 저자 */
+#book_detail>h3 {
+    font-family: 'MinSans-Medium';
+    font-size: 20px;
+    color: #adaaaa;
+    margin: 0px 0px 20px 0px;
+}
+/* ----- /책 선택하기 ----- */
+
+
+/* ----- 책 선택하기 모달창 ----- */
+.modal-playlist .info-container .book-title {
+    width: fit-content;
+    padding: 0.1rem 0.2rem;
+    border: none;
+    background-color: #ffffff;
+    font-size: 1.9rem;
+    font-weight: bold;
+    color: #666666;
+    font-family: 'Nanum Myeongjo';
+    text-shadow: 3px 3px 5px #d1cfcf;
+}
+
+.modal-playlist .info-container .book-author {
+font-size: 1.3rem;
+color: #666666;
+font-family: 'Nanum Myeongjo';
+}
+
+.modal-playlist .info-container .review-count {
+font-weight: bold;
+color: rgb(75, 75, 75);
+font-family: 'Nanum Myeongjo';
+}
+
+.modal-playlist .book-img-container .img-thumbnail {
+    width: 92px;
+    height: 145px;
+    border-radius: 0.5rem;
+    background-image: none;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    margin-right: 1.5rem;
+    cursor: pointer;
+}
+/* ----- /책 선택하기 모달창 ----- */
+
+
+/* ----- 서평 쓰기 ----- */
+#review_box {
+    display: table;
+	padding: 30px;
+	height: 650px;
+    width: 1030px;
+    border-radius: 16px;
+    background: #2E8B57;
+    color:#ffffff;
+    margin: auto;
+   /* background-image: url(/static/imagefarm/101074948/7jq08lxPGuzxsz0f1zZAJIH4xmwITUMM) */
+}
+#limit-text{
+    display: block;
+    color: #000000;
+    text-align: right;
+    font-size: 20px;
+    font-weight: bold;
+    color: #2E8B57;
+    padding: 0px;
+    margin: 10px 50px 0px 0px;
+    font-family: 'Nanum Myeongjo'; 
+   /* background-image: url(/static/imagefarm/101074948/7jq08lxPGuzxsz0f1zZAJIH4xmwITUMM) */
+}
+
+
+#review_box p {
+    display: table-cell;
+    vertical-align: middle;
+    text-align:center;
+    font-size: 20px;
+	font-family: 'Nanum Myeongjo'; 
+}
+
+#contents #limit-text>p{
+    size: 100px;
+}
+
+#book_review {
+    margin: 20px 0px 20px 0px;
+}
+
+.review_count {
+    font-family: 'MinSans-Medium';
+    font-size: 20px;
+    color: #adaaaa;
+    margin-right: 10px;
+}
+
+.review_num {
+    font-family: 'MinSans-Medium';
+    font-size: 20px;
+    font-weight: bold;
+    color: #666666;  
+}
+
+#btn_delete {
+    float:right;
+    padding: auto;
+    margin: 0px 10px 0px 0px;
+    background-color: none;
+}
+
+#btn_modify {
+    float:right;
+    padding: auto;
+    margin: 0px 10px 0px 0px;
+    background-color: none;
+}
+/* ----- /서평 쓰기 ----- */
+
+
+/* ----- 감정 태그 선택하기 ----- */
 #contents #mood_tag h1 {
 	padding: 30px 0px 10px 0px;
     margin: 50px 30px 10px 0px;
@@ -115,7 +266,7 @@ body {
     color: #666666;
 }
 
-#btn_mood>button {
+#btn_mood button {
 	display:block;
 	float:left;
     padding: 15px 40px 15px 40px;
@@ -123,18 +274,22 @@ body {
 }
 
 
-/* 스타일 */
+/* ----- 스타일 선택하기 ----- */
 #contents #style h1{
 	padding: 30px 0px 10px 0px;
-    margin: 200px 30px 10px 0px;
+    margin: 150px 30px 10px 0px;
 	float:center; 
     font-family: 'KOHIBaeumOTF';
     font-size: 25px;
     color: #666666;	
 }
 
+#select-style {
+    margin: 20px;
+}
+
 /* 스타일 선택 버튼 */
-.btn_style{
+.btn_style {
 	width: 70px;
 	height: 70px;
 	border-radius:50%;
@@ -145,38 +300,10 @@ body {
 	margin-right:20px; 
 	background: #addddd; /* 여기 이미지 버튼으로 바꾸기  */
 }
-
-/* 서평 적는 공간 */
-#review_box{
-	padding: 30px;
-	height: 500px;
-    background: #2E8B57;	
-   /* background-image: url(/static/imagefarm/101074948/7jq08lxPGuzxsz0f1zZAJIH4xmwITUMM) */
-}
-
-#review{
-	margin: 15%;
-	color:#ffffff;
-	text-align:center;
-	font-size: 1.5em;
-	font-family: 'Nanum Myeongjo';
-	
-	/* position: absolute; */
-	/* top: 50%;
-	left: 50%; */
-}
-
-/* .input_review .p{
-    border-radius: 15px;
-    margin: 15px 0px 15px 0px;
-    padding: 35px 45px 35px 45px;
-    text-align: center;
- 
-   
-} */
+/* ----- /스타일 선택하기 ----- */
 
 
-/* 플레이리스트에 추가 */
+/* ----- 플레이리스트에 추가 ----- */
 #contents #add_playlist h1 {
 	padding: 30px 0px 10px 0px;
     margin: 50px 30px 10px 0px;
@@ -185,8 +312,116 @@ body {
     color: #666666;
 }
 
+/* 플레이리스트 모달창 */
+.modal-container {
+    width: 100%;
+    background-color: none;
+    /****************/
+    padding: 2rem 2.5rem;
+    border-radius: 0.5rem;
+}
 
-/* 이미지 저장 */
+.modalHeader {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 1.5rem;
+}
+
+.modalHeader .title {
+    font-weight: bold;
+}
+
+.modalHeader .closeBtn {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.modal-search {
+    padding-bottom: 1.3rem;
+    position: relative;
+}
+
+.modal-search input {
+    width: 100%;
+    padding: 0.7rem 1rem;
+    border-radius: 1.5rem;
+    border: 2px solid #666666;
+}
+
+.modal-search:after {
+    content: "\f002";
+    z-index: 2;
+    color: #666666;
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free";
+    position: absolute;
+    right: 1rem;
+    top: 0.8rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.modal-playlist ul {
+    list-style: none;
+    padding: 0 1rem;
+}
+
+.modal-playlist ul .list {
+    display: flex;
+    padding: 2rem 0;
+    border-bottom: 1px solid rgb(196, 195, 195);
+}
+
+.modal-playlist .img-container {
+    width: 100px;
+    height: 100px;
+    border-radius: 0.5rem;
+    background-color: pink;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    margin-right: 1.5rem;
+    cursor: pointer;
+}
+
+.modal-playlist .info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.modal-playlist .info-container .tagBtn {
+    background-color: rgb(218, 243, 250);
+    border: 1px solid rgb(218, 243, 250);
+    color: rgb(0, 132, 255);
+    border-radius: 0.5rem;
+    width: fit-content;
+    padding: 0.1rem 0.2rem;
+    font-size: 0.8rem;
+}
+
+.modal-playlist .info-container .playlist-title {
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #666666;
+}
+
+.modal-playlist .info-container .username {
+    font-weight: bold;
+    color: rgb(75, 75, 75);
+    font-family: 'Nanum Myeongjo';
+}
+
+.paging {
+    display: flex;
+    justify-content: center;
+}
+/* ----- /플레이리스트에 추가 ----- */ 
+
+
+/* ----- 이미지 저장 ----- */
 #contents #download_img h1 {
 	padding: 30px 0px 10px 0px;
     margin: 50px 30px 10px 0px;
@@ -194,6 +429,8 @@ body {
     font-size: 25px;
     color: #666666;
 }
+/* ----- /이미지 저장 ----- */
+
 
 /* 동그라미 버튼 */
 .btn_circle{
@@ -201,93 +438,37 @@ body {
 	height: 70px;
 	border-radius:50%;
 	border: none;
-	background: #adaaaa;
+	background: #5e5d5d38;
 	font-size:25px;
 	text-align:center;
 	line-height:30px;
 }
 
-/* 모달창 안에 돋보기 버튼 */
-.search_btn{
-	float:right;
-	height: 50px;
-	width:50px;
-} 
 
-/* 플레이리스트에 추가*/
-.modal-title{
-	float:left;
-}
-
-.cancle_btn{
-	float:right;
-}
-
-
-
-#btn_write {
-    float:right;
-    padding: 10px 60px 10px 60px;
-    background-color: #2699fb;
-}
-
-
-/* ------------컨텐츠 (책서평)---------------- */
-#contents_review>ul>li {
-    float:left;
-    margin: 0px 30px 0px 0px;
-}
-
-.review_list {
-    margin: 0px 0px 0px 40px;
-    font-size: 15px;
-}
-
-.jumbotron {
-    border-radius: 15px;
-    margin: 15px 0px 15px 0px;
-    padding: 35px 45px 35px 45px;
-}
-.jumbotron_2 {
-    border-radius: 15px;
-    margin: 15px 0px 15px 0px;
-    padding: 35px 45px 35px 45px;
-}
-
-#select_box{
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-}
-
-
+/* ----- footer 쪽 기록하기 button ----- */
 #btn_admit{
 	height: 50px;
 	width:1110px;
+    margin-top: 50px;
 	display:block;
 }
 
+/* ----- footer 쪽 취소 button ----- */
 #btn_cancle{
 	height: 50px;
 	width:1110px;
-	margin: auto;
+	margin-top: 5px;
 }
 
-
-
-
-
-
+/* ----- jumbotron 관련 ----- */
 .jumbotron>div>.button {
     font-size: 125px;
     font-weight: bold;
     color: #666666;
     text-align: center;
     line-height: 100px;
-
    	margin-bottom: 40px;
 }
-
-
 
 .jumbotron>div>p {
     color: #adaaaa;
@@ -295,32 +476,131 @@ body {
     line-height: 100px;
 }
 
-#review_box>p {
+.jumbotron {
+    border-radius: 15px;
+    margin: 15px 0px 15px 0px;
+    padding: 35px 45px 35px 45px;
+}
+/* ----- /jumbotron2 관련 ----- */
+.jumbotron2 {
+    display: inline-flex;
+    width: 550px;
+    height: 100px;
+    background-color: #EEEEEE;
+    border-radius: 15px;
+    margin: 15px 5px 15px 5px;
+    padding: 35px 45px 35px 45px;
+}
+
+.jumbotron2 p {
     color: #adaaaa;
+    font-size: 17px;
     text-align: center;
-    line-height: 500%;
-  
+    padding: auto;
+    margin: auto;
+    font-family: 'MinSans-Medium';
+   
 }
 
-.review_like {
-    margin: 5px;
-}
-
-
-/* --------------footer------------- */
+/* ----- footer ----- */
 #footer {
     margin: 50px 0px 60px 0px;
     border-top : 2px solid #e4e4e4;
     padding: 15px 0px 0px 0px;
     color: #666666;
 }
+
 #footer>div{
     float: left;
 }
+
 #footer>a {
     float: right;
     margin: 18px 10px 0px 0px;
 }
+/* ----- /footer ----- */
 
 
+/* -------progress bar 연습-------- */
+.progressbar-wrapper {
+    background: #fff;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    float: center;
+}
 
+.progressbar li {
+    list-style-type: none;
+    width: 20%;
+    float: left;
+    font-size: 12px;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    color: #7d7d7d;
+}
+
+.progressbar li:before {
+    width: 60px;
+    height: 60px;
+    content: "";
+    line-height: 60px;
+    border: 2px solid #EEEEEE;
+    display: block;
+    text-align: center;
+    margin: 0 auto 3px auto;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
+}
+
+.progressbar li:after {
+     width: 100%;
+     height: 2px;
+     content: '';
+     position: absolute;
+     background-color: #EEEEEE;
+     top: 30px;
+     left: -50%;
+     z-index: 0;
+}
+
+.progressbar li:first-child:after {
+     content: none;
+}
+
+.progressbar li.active {
+    color: #2E8B57;
+    font-weight: bold;  
+}
+
+.progressbar li.active:before {
+    border-color: #55b776;
+    background: #2E8B57;
+}
+
+.progressbar li.active + li:after {
+    background-color: #55b776;
+}
+
+.progressbar li.active:before {
+    background: #55b776  url(user.svg) no-repeat center center;
+    background-size: 60%;
+}
+
+.progressbar li::before {
+    background: #fff url(user.svg) no-repeat center center;
+    background-size: 60%;
+}
+
+.progressbar {
+    counter-reset: step;
+}
+
+.progressbar li:before {
+    content: counter(step);
+    counter-increment: step; 
+}
+/* ------- /progress bar 연습 -------- */
